[gd_scene load_steps=5 format=3 uid="uid://ci7rd87xnty41"]

[ext_resource type="PackedScene" uid="uid://41v1b7irql7w" path="res://UI/DeathScreen.tscn" id="1_03641"]
[ext_resource type="Script" path="res://UI/level_menu_handler.gd" id="1_kk6p1"]
[ext_resource type="PackedScene" uid="uid://dxyp2mkh1kodo" path="res://UI/LevelCompleteScreen.tscn" id="2_8ipgk"]
[ext_resource type="PackedScene" uid="uid://bb7ukfr71y5dj" path="res://UI/PauseScreen.tscn" id="3_0s7sk"]

[node name="LevelMenuHandler" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_kk6p1")

[node name="DeathScreenTexture" parent="." instance=ExtResource("1_03641")]

[node name="LevelCompleteScreen" parent="." instance=ExtResource("2_8ipgk")]

[node name="PauseScreen" parent="." instance=ExtResource("3_0s7sk")]
process_mode = 3

[connection signal="hidden" from="PauseScreen" to="." method="_on_pause_screen_hidden"]
